--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Ban all",
     "description": "help you to ban the all memebers from the group",
-    "repository": "https://github.com/TIMESISNOTWAITING/Banall",
+    "repository": "https://github.com/Devarora2604/Banall",
     "image": "heroku/python",
     "env": {
         "TELEGRAM_TOKEN": {
@@ -20,7 +20,7 @@
     "formation": {
             "worker": {
                 "quantity": 1,
-                "size": "free"
+                "size": "eco"
             }
         }
   }
